--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:inngest": "npx inngest-cli@latest dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -53,6 +54,7 @@
     "dotenv": "^17.2.1",
     "embla-carousel-react": "^8.6.0",
     "gemini-zod": "^0.1.2",
+    "inngest": "^3.40.1",
     "input-otp": "^1.4.2",
     "langchain": "^0.3.30",
     "lucide-react": "^0.525.0",
