postinstall prisma generate

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build-check": "npm run build && npm run typecheck && npm run lint",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.25.4",
